--- a/index.html
+++ b/index.html
@@ -45,28 +45,30 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav ml-auto">
 		      <li class="nav-item active">
-		        <a class="nav-link" href="#">Agency <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="#agency">Agency <span class="sr-only">(current)</span></a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Portfolio</a>
+		        <a class="nav-link" href="#portfolio">Portfolio</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Pricing</a>
+		        <a class="nav-link" href="#pricing">Pricing</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Page</a>
+		        <a class="nav-link" href="#service">Service</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">Blog</a>
+		        <a class="nav-link" href="#blogpost">Blog</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">contact</a>
+		        <a class="nav-link" href="#contact">contact</a>
 		      </li>
 		      <li class="nav-item">
-		        <img src="image/cart.png">
+		        <!-- <img src="image/cart.png"> -->
+		        <a href="#"><i class="fas fa-shopping-cart"></i></a>
 		      </li>
 		      <li class="nav-item">
-		        <img src="image/search.png">
+		        <!-- <img src="image/search.png"> -->
+		        <a href="#"><i class="fas fa-search"></i></a>
 		      </li>
 		      <li class="nav-item">
 		        <button class="navbar-btn customhover">Sign In</button>
@@ -129,7 +131,7 @@
 				<p>
 					<br>
 					Every product must make a statement and we’re ready to create it with holistic approach to design. We believe that payments is a problem rooted in code, not finance. We obsessively seek out elegant, 
-				<br><br>
+				<br>
 					Every product must make a statement and we’re ready to create it with holistic approach to design. We believe that payments is a problem rooted in code, not finance. We obsessively seek out elegant, 
 				</p>
 			</div>
@@ -138,8 +140,8 @@
 				<div class="textbox">
 					<h5>Product Design</h5>
 					<p>
-						Every product must make a statement and we’re ready to create it with 
-						holistic approach to design.
+					Every product must make a statement and we’re ready to create it with 
+					holistic approach.
 					</p>
 					<br><br>
 					<div class="row">
@@ -198,7 +200,7 @@
 	</div>
 </section>
 
-<section class="aboutus">
+<section class="aboutus" id="agency">
 	<div class="container">
 		<h4>About the Agency</h4>
 		<h1>Insights and resources to 
@@ -218,7 +220,7 @@
 </section>
 
 
-<section class="company_history">
+<section class="company_history" id="pricing">
 	<!-- <div class="custom_width">
 		<div class="row">
 			<div class="col-3 shadowbox1">
@@ -288,7 +290,7 @@
 </section>
 
 
-<section class="ourservice">
+<section class="ourservice" id="service">
 	<div class="container">
 		<div class="row">
 			<div class="col-4">
@@ -393,7 +395,7 @@
 </section>
 
 
-<section class="portfolio">
+<section class="portfolio" id="portfolio">
 	<div class="main">
 
 
@@ -485,7 +487,7 @@
 	</div>
 </section>
 
-<section class="ourblogpost">
+<section class="ourblogpost" id="blogpost">
 	<div class="container">
 		
 		<div class="row">
@@ -550,14 +552,14 @@
 			</div>
 		</div>
 	
-	<div class="callToAction">
+	<div class="callToAction" id="contact">
 		<div class="row">
 			<div class="col-8">
 				<h3>We are creatives, so it might be about minions and stuff</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, repellat.</p>
 			</div>
 			<div class="col-4">
-				<button>Contact US</button>
+				<a href="#footer"><button>Contact US</button></a>
 			</div>
 		</div>
 	</div>
@@ -567,7 +569,7 @@
 
 </section>
 
-<footer class="footer">
+<footer class="footer" id="footer">
 	<div class="container">
 		<div class="row footerline">
 			<div class="col-3">
