--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="container">
 		
 		<nav class="navbar navbar-expand-lg navbar-light ">
-		  <a class="navbar-brand" href="#">
+		  <a class="navbar-brand" href="index.html">
 		  	<img src="image/logo.png">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
