--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="container">
 		
 		<nav class="navbar navbar-expand-lg navbar-light ">
-		  <a class="navbar-brand" href="index.html">
+		  <a class="navbar-brand" href="#">
 		  	<img src="image/logo.png">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,10 +89,10 @@
 			</p>	
 			<br>
 			<div class="row">
-				<div class="col-2">
+				<div class="col-lg-2 col-sm-4">
 					<button class="customhover">Get Started</button>
 				</div>
-				<div class="col-2">
+				<div class="col-lg-2 col-sm-4">
 					<h6>Video</h6>
 					<a href="#"><img src="image/Videoplaybtn.png"></a>
 				</div>
@@ -112,11 +112,11 @@
 <section class="wearefantasy">
 	<div class="container">
 		<div class="row">
-			<div class="col-5">
+			<div class="col-lg-5 col-sm-8">
 				<h2>We Are Fantasy We've got you
 				covered on</h2>
 			</div>
-			<div class="col-6 ml-auto">
+			<div class="col-lg-6 col-sm-12">
 				<button class="customhover">Learn More</button>
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 <section class="sectionthree">
 	<div class="container">
 		<div class="row">
-			<div class="col-4 customfont">
+			<div class="col-lg-4 col-sm-0 customfont">
 				<p>
 					<br>
 					Every product must make a statement and we’re ready to create it with holistic approach to design. We believe that payments is a problem rooted in code, not finance. We obsessively seek out elegant, 
@@ -135,7 +135,7 @@
 					Every product must make a statement and we’re ready to create it with holistic approach to design. We believe that payments is a problem rooted in code, not finance. We obsessively seek out elegant, 
 				</p>
 			</div>
-			<div class="col-4 box1">
+			<div class="col-lg-4 col-sm-6 box1">
 				<img src="image/box-bg1.png">
 				<div class="textbox">
 					<h5>Product Design</h5>
@@ -166,7 +166,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-4 box1">
+			<div class="col-lg-4 col-sm-6 box1">
 				<img src="image/box-bg2.png">
 				<div class="textbox">
 					<h5>Creative Web Solution</h5>
@@ -212,7 +212,7 @@
 		</p>	
 		<br>
 		<div class="row">
-			<div class="col-2">
+			<div class="col-lg-2 col-sm-12 col-md-6">
 				<button class="customhover">Read Success Story</button>
 			</div>
 		</div>
@@ -240,28 +240,28 @@
 	</div> -->
 	<div class="container">
 		<div class="row">
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6 col-md-6">
 				<div class="txtbox1">
 					<p>Total Invest</p>
 					<h5>$<span class="txthighlight">15</span>M</h5>
 				</div>
 			</div>
 
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6 col-md-6">
 				<div class="txtbox2">
 					<p>Project Done</p>
 					<h5><span class="txthighlight">25</span>K+</h5>
 				</div>
 			</div>
 
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6 col-md-6">
 				<div class="txtbox3">
 					<p>Offices</p>
 					<h5><span class="txthighlight">04</span></h5>
 				</div>
 			</div>
 
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6 col-md-6">
 				<div class="txtbox4">
 					<p>Happy Client</p>
 					<h5><span class="txthighlight">90</span>k+</h5>
@@ -293,13 +293,13 @@
 <section class="ourservice" id="service">
 	<div class="container">
 		<div class="row">
-			<div class="col-4">
+			<div class="col-lg-4 col-sm-12">
 				<h4>OUR SERVICES</h4>
 				<h2>Build lasting relationships with customers</h2>
 				<button class="customhover">Load More</button>
 			</div>
 
-				<div class="col-4">
+				<div class="col-lg-4 col-sm-12">
 					<div class="image-width">
 						<img src="image/box-bg3.png" class="img-fluid">
 					</div>
@@ -320,7 +320,7 @@
 					</div>
 
 				</div>
-				<div class="col-4">
+				<div class="col-lg-4 col-sm-12">
 					<div class="image-width2">
 						<img src="image/box-bg5.png" class="img-fluid">
 					</div>
@@ -329,7 +329,6 @@
 						<p>Every product must make a statement and we’re ready to create it with holistic approach to design.</p>
 					</div>
 
-
 					<div class="image-width4">
 						<img src="image/box-bg6.png" class="img-fluid">
 					</div>
@@ -337,7 +336,7 @@
 						<h4>Design & Development</h4>
 						<p>Business Analysis is the practice of enabling change in an organizational context, by defining needs </p>
 					</div>
-
+			
 
 				</div>
 
@@ -352,25 +351,29 @@
 <section class="ourteam">
 	<div class="container">
 		<div class="row">
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6">
 				<img src="image/team1.png" alt="team member" class="img-fluid">
 				<h4>Mahfuz Riad</h4>
 				<p>Web Development</p>
+				<br><br>
 			</div>
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6">
 				<img src="image/team2.png" alt="team member" class="img-fluid">
 				<h4>Mahfuz Riad</h4>
 				<p>Head of Ideas</p>
+				<br><br>
 			</div>
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6">
 				<img src="image/team3.png" alt="team member" class="img-fluid">
 				<h4>Anup Basak</h4>
 				<p>Web designer</p>
+				<br><br>
 			</div>
-			<div class="col-3">
+			<div class="col-lg-3 col-sm-6">
 				<img src="image/team4.png" alt="team member" class="img-fluid">
 				<h4>Tamim Iq</h4>
 				<p>Web designer</p>
+				<br><br>
 			</div>
 		</div>
 	</div>
@@ -383,10 +386,10 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-8">
+			<div class="col-lg-8 col-sm-12">
 				<h2>We have done lot of Agency Task</h2>
 			</div>
-			<div class="col-2 text-center borderbox">
+			<div class="col-lg-2 col-sm-12 text-center borderbox">
 				<h4><span class="txt-highlight">05</span>k</h4>
 				<p>Agency Task Complete</p>
 			</div>
@@ -410,34 +413,34 @@
 
 
 		<div class="row">
-		  <div class="column Creative">
+		  <div class="col-lg-4 col-md-6 col-sm-12 column Creative">
 		    <div class="content">
 		      <img src="image/portfolio/portfolio2.jpg" alt="Mountains" style="width:100%">
 
 		    </div>
 		  </div>
-		  <div class="column Agency">
+		  <div class="col-lg-4 column Agency">
 		    <div class="content">
 		    	<img src="image/portfolio/portfolio3.jpg" alt="Lights" style="width:100%">
 		    </div>
 		  </div>
-		  <div class="column uiux">
+		  <div class="col-lg-4 col-md-6 col-sm-12 column uiux">
 		    <div class="content">
 		    	<img src="image/portfolio/portfolio4.jpg" alt="Nature" style="width:100%">
 		    </div>
 		  </div>
 		  
-		  <div class="column Agency">
+		  <div class="col-lg-4 col-md-6 col-sm-12 column Agency">
 		    <div class="content">
 		      <img src="image/portfolio/portfolio5.jpg" alt="Nature" style="width:100%">
 		    </div>
 		  </div>
-		  <div class="column uiux">
+		  <div class="col-lg-4 col-md-6 col-sm-12 column uiux">
 		    <div class="content">
 		    	<img src="image/portfolio/portfolio5.jpg" alt="Nature" style="width:100%">
 		    </div>
 		  </div>
-		  <div class="column Creative">
+		  <div class="col-lg-4 col-md-6 col-sm-12 column Creative">
 		    <div class="content">
 		    	<img src="image/portfolio/portfolio6.jpg" alt="Nature" style="width:100%">
 		    </div>
@@ -447,34 +450,38 @@
 
 </section> 
 
+
+
 <section class="testomonial">
 	<div class="container">
 		<div class="row">
-			<div class="col-6">
+			<div class="col-lg-6 col-sm-12 col-md-6">
 				<h4>Testomonial</h4>
 				<h2>What Our core client say ?</h2>
 			</div>
 		</div>
-
+		
 
 		<div class="owl-carousel">
 		  <div class="testomonial_width">
 		  	<div class="row">
-		  		<div class="col-12">
+		  		<div class="col-lg-12">
 		  			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad et quod ab! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, saepe.</p>
 		  		</div>
+
+
 		  	</div>
 		  	<div class="row">
-		  		<div class="col-2">
+		  		<div class="col-lg-2">
 		  			<img src="image/team1.png" class="img-fluid">
 		  		</div>
-		  		<div class="col-4">
+		  		<div class="col-lg-4">
 		  			<h6>Anup Basak</h6>
 					<h6>Designer</h6>
 		  		</div>
 		  	</div>
 			
-
+		
 
 
 
@@ -497,8 +504,8 @@
 		</div>
 
 		<div class="row">
-			<div class="col-4">
-				<div class="card" style="width: 18rem;">
+			<div class="col-lg-4 col-s-12 col-md-6">
+				<div class="card" style="width: 100%;">
 				  <img src="image/card1.jpg" class="card-img-top" alt="...">
 				  <div class="date">
 				  	<h5>24
@@ -515,8 +522,8 @@
 				</div>
 			</div>
 
-			<div class="col-4">
-				<div class="card" style="width: 18rem;">
+			<div class="col-lg-4 col-s-12 col-md-6">
+				<div class="card" style="width: 100%;">
 				  <img src="image/card2.jpg" class="card-img-top" alt="...">
 				  <div class="date">
 				  	<h5>24
@@ -533,8 +540,8 @@
 				</div>
 			</div>
 
-			<div class="col-4">
-				<div class="card" style="width: 18rem;">
+			<div class="col-lg-4 col-s-12 col-md-6">
+				<div class="card" style="width: 100%;">
 				  <img src="image/card1.jpg" class="card-img-top" alt="...">
 				  <div class="date">
 				  	<h5>24
@@ -572,7 +579,7 @@
 <footer class="footer" id="footer">
 	<div class="container">
 		<div class="row footerline">
-			<div class="col-3">
+			<div class="col-lg-3 col-md-6 col-sm-12 company">
 				<img src="image/logo.png">
 				<h5>Language : English(UK)</h5>
 				<a href="#">Career</a>
@@ -584,7 +591,7 @@
 					<a href="#"><i class="fab fa-twitter"></i></a>
 				</div>
 			</div>
-			<div class="col-2">
+			<div class="col-2 corelink">
 				<h4>Core Link</h4>
 				<a href="#">Team Member</a><br>
 				<a href="#">Pricing Plan</a><br>
@@ -592,14 +599,14 @@
 				<a href="#">Apps Store</a><br>
 				<a href="#">About Company</a>
 			</div>
-			<div class="col-2">
+			<div class="col-2 information">
 				<h4>Information</h4>
 				<p>113 momo Street, bd 721 NY 20012 </p>
 				<a href="mailto:kabbohelp@gmail.com">kabbohelp@gmail.com</a>
 				<a href="tel:88 (0) 29292162">+88 (0) 29292162</a>
 
 			</div>
-			<div class="col-2 customfontsize">
+			<div class="col-2 customfontsize hidden">
 				<h4>Stay in loop</h4>
 				<p>Subscribe to receive biweekly tips on creative automation and digital advertising!</p>
 				<form>
@@ -608,7 +615,7 @@
 				</form>
 
 			</div>
-			<div class="col-2 space">
+			<div class="col-2 space about_company">
 				<h4>About Company</h4>
 				<a href="#">How it works</a><br>
 				<a href="#">Development</a><br>
@@ -651,6 +658,7 @@ $('.owl-carousel').owlCarousel({
     margin:10,
     nav:true,
     dots:true,
+
 
     responsive:{
         0:{
