--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- <html lang="en"> -->
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -89,10 +89,10 @@
 			</p>	
 			<br>
 			<div class="row">
-				<div class="col-lg-2 col-sm-4">
+				<div class="col-lg-2 col-xs-4">
 					<button class="customhover">Get Started</button>
 				</div>
-				<div class="col-lg-2 col-sm-4">
+				<div class="col-lg-2 col-xs-4">
 					<h6>Video</h6>
 					<a href="#"><img src="image/Videoplaybtn.png"></a>
 				</div>
@@ -104,7 +104,7 @@
 	</div>
 
 
-</Header>>
+</Header>
 	
 
 	
@@ -112,11 +112,11 @@
 <section class="wearefantasy">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-5 col-sm-8">
+			<div class="col-lg-5 col-xs-8">
 				<h2>We Are Fantasy We've got you
 				covered on</h2>
 			</div>
-			<div class="col-lg-6 col-sm-12">
+			<div class="col-lg-6 col-xs-12">
 				<button class="customhover">Learn More</button>
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 <section class="sectionthree">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-4 col-sm-0 customfont">
+			<div class="col-lg-4 col-xs-0 customfont">
 				<p>
 					<br>
 					Every product must make a statement and we’re ready to create it with holistic approach to design. We believe that payments is a problem rooted in code, not finance. We obsessively seek out elegant, 
@@ -135,7 +135,7 @@
 					Every product must make a statement and we’re ready to create it with holistic approach to design. We believe that payments is a problem rooted in code, not finance. We obsessively seek out elegant, 
 				</p>
 			</div>
-			<div class="col-lg-4 col-sm-6 box1">
+			<div class="col-lg-4 col-xs-6 box1">
 				<img src="image/box-bg1.png">
 				<div class="textbox">
 					<h5>Product Design</h5>
@@ -166,7 +166,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-4 col-sm-6 box1">
+			<div class="col-lg-4 col-xs-6 box1">
 				<img src="image/box-bg2.png">
 				<div class="textbox">
 					<h5>Creative Web Solution</h5>
@@ -212,7 +212,7 @@
 		</p>	
 		<br>
 		<div class="row">
-			<div class="col-lg-2 col-sm-12 col-md-6">
+			<div class="col-lg-2 col-xs-12 col-md-6">
 				<button class="customhover">Read Success Story</button>
 			</div>
 		</div>
@@ -221,47 +221,30 @@
 
 
 <section class="company_history" id="pricing">
-	<!-- <div class="custom_width">
-		<div class="row">
-			<div class="col-3 shadowbox1">
-				<img src="image/background_shadhow_box.png">
-				<h3>Total Invest</h3>
-			</div>
-			<div class="col-3 shadowbox2">
-				<img src="image/background_shadhow_box.png">
-			</div>
-			<div class="col-3 shadowbox3">
-				<img src="image/background_shadhow_box.png">
-			</div>
-			<div class="col-3 shadowbox4">
-				<img src="image/background_shadhow_box.png">
-			</div>
-		</div>
-	</div> -->
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3 col-sm-6 col-md-6">
+			<div class="col-lg-3 col-xs-6 col-md-6">
 				<div class="txtbox1">
 					<p>Total Invest</p>
 					<h5>$<span class="txthighlight">15</span>M</h5>
 				</div>
 			</div>
 
-			<div class="col-lg-3 col-sm-6 col-md-6">
+			<div class="col-lg-3 col-xs-6 col-md-6">
 				<div class="txtbox2">
 					<p>Project Done</p>
 					<h5><span class="txthighlight">25</span>K+</h5>
 				</div>
 			</div>
 
-			<div class="col-lg-3 col-sm-6 col-md-6">
+			<div class="col-lg-3 col-xs-6 col-md-6">
 				<div class="txtbox3">
 					<p>Offices</p>
 					<h5><span class="txthighlight">04</span></h5>
 				</div>
 			</div>
 
-			<div class="col-lg-3 col-sm-6 col-md-6">
+			<div class="col-lg-3 col-xs-6 col-md-6">
 				<div class="txtbox4">
 					<p>Happy Client</p>
 					<h5><span class="txthighlight">90</span>k+</h5>
@@ -276,13 +259,13 @@
 <section class="dailylog">
 	<div class="container">
 		<div class="row">
-			<div class="col-4 text-right">
+			<div class="col-4 ">
 				<p><span class="highlighter">12K+</span> DAILY STANDUPS</p>
 			</div>
-			<div class="col-4 text-center">
+			<div class="col-4">
 				<p><span class="highlighter">1M+ </span> COMMITS </p>
 			</div>
-			<div class="col-4 text-left">
+			<div class="col-4 ">
 				<p><span class="highlighter">10K+</span>  USER STORIES</p>
 			</div>
 		</div>
@@ -293,13 +276,13 @@
 <section class="ourservice" id="service">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-4 col-sm-12">
+			<div class="col-lg-4 col-xs-12">
 				<h4>OUR SERVICES</h4>
 				<h2>Build lasting relationships with customers</h2>
 				<button class="customhover">Load More</button>
 			</div>
 
-				<div class="col-lg-4 col-sm-12">
+				<div class="col-lg-4 col-xs-12">
 					<div class="image-width">
 						<img src="image/box-bg3.png" class="img-fluid">
 					</div>
@@ -320,7 +303,7 @@
 					</div>
 
 				</div>
-				<div class="col-lg-4 col-sm-12">
+				<div class="col-lg-4 col-xs-12">
 					<div class="image-width2">
 						<img src="image/box-bg5.png" class="img-fluid">
 					</div>
@@ -351,25 +334,25 @@
 <section class="ourteam">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-3 col-sm-6">
+			<div class="col-lg-3 col-xs-6">
 				<img src="image/team1.png" alt="team member" class="img-fluid">
 				<h4>Mahfuz Riad</h4>
 				<p>Web Development</p>
 				<br><br>
 			</div>
-			<div class="col-lg-3 col-sm-6">
+			<div class="col-lg-3 col-xs-6">
 				<img src="image/team2.png" alt="team member" class="img-fluid">
 				<h4>Mahfuz Riad</h4>
 				<p>Head of Ideas</p>
 				<br><br>
 			</div>
-			<div class="col-lg-3 col-sm-6">
+			<div class="col-lg-3 col-xs-6">
 				<img src="image/team3.png" alt="team member" class="img-fluid">
 				<h4>Anup Basak</h4>
 				<p>Web designer</p>
 				<br><br>
 			</div>
-			<div class="col-lg-3 col-sm-6">
+			<div class="col-lg-3 col-xs-6">
 				<img src="image/team4.png" alt="team member" class="img-fluid">
 				<h4>Tamim Iq</h4>
 				<p>Web designer</p>
@@ -386,10 +369,10 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-8 col-sm-12">
+			<div class="col-lg-8 col-xs-12">
 				<h2>We have done lot of Agency Task</h2>
 			</div>
-			<div class="col-lg-2 col-sm-12 text-center borderbox">
+			<div class="col-lg-2 col-xs-12 text-center borderbox">
 				<h4><span class="txt-highlight">05</span>k</h4>
 				<p>Agency Task Complete</p>
 			</div>
@@ -413,7 +396,7 @@
 
 
 		<div class="row">
-		  <div class="col-lg-4 col-md-6 col-sm-12 column Creative">
+		  <div class="col-lg-4 col-md-6 col-xs-12 column Creative">
 		    <div class="content">
 		      <img src="image/portfolio/portfolio2.jpg" alt="Mountains" style="width:100%">
 
@@ -424,23 +407,23 @@
 		    	<img src="image/portfolio/portfolio3.jpg" alt="Lights" style="width:100%">
 		    </div>
 		  </div>
-		  <div class="col-lg-4 col-md-6 col-sm-12 column uiux">
+		  <div class="col-lg-4 col-md-6 col-xs-12 column uiux">
 		    <div class="content">
 		    	<img src="image/portfolio/portfolio4.jpg" alt="Nature" style="width:100%">
 		    </div>
 		  </div>
 		  
-		  <div class="col-lg-4 col-md-6 col-sm-12 column Agency">
+		  <div class="col-lg-4 col-md-6 col-xs-12 column Agency">
 		    <div class="content">
 		      <img src="image/portfolio/portfolio5.jpg" alt="Nature" style="width:100%">
 		    </div>
 		  </div>
-		  <div class="col-lg-4 col-md-6 col-sm-12 column uiux">
+		  <div class="col-lg-4 col-md-6 col-xs-12 column uiux">
 		    <div class="content">
 		    	<img src="image/portfolio/portfolio5.jpg" alt="Nature" style="width:100%">
 		    </div>
 		  </div>
-		  <div class="col-lg-4 col-md-6 col-sm-12 column Creative">
+		  <div class="col-lg-4 col-md-6 col-xs-12 column Creative">
 		    <div class="content">
 		    	<img src="image/portfolio/portfolio6.jpg" alt="Nature" style="width:100%">
 		    </div>
@@ -455,7 +438,7 @@
 <section class="testomonial">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6 col-sm-12 col-md-6">
+			<div class="col-lg-6 col-xs-12 col-md-6">
 				<h4>Testomonial</h4>
 				<h2>What Our core client say ?</h2>
 			</div>
@@ -579,7 +562,7 @@
 <footer class="footer" id="footer">
 	<div class="container">
 		<div class="row footerline">
-			<div class="col-lg-3 col-md-6 col-sm-12 company">
+			<div class="col-lg-3 col-md-6 col-xs-12 company">
 				<img src="image/logo.png">
 				<h5>Language : English(UK)</h5>
 				<a href="#">Career</a>
@@ -625,8 +608,8 @@
 			</div>
 		</div>
 		<div class="btngroup">
-			<button><i class="fab fa-apple"></i>App Store</button>
-			<button><i class="fab fa-google-play"></i>PlayStore</button>
+			<button><i class="fab fa-apple">App Store</i></button>
+			<button><i class="fab fa-google-play">PlayStore</i></button>
 		</div>
 		<div class="copyright">
 			<p>2019 All Rights Reserved</p>
