--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 	<!-- Main Custom CSS File -->
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
+
+	<!-- rotation css file -->
+	<link rel="stylesheet" href="css/rotation.css">
 </head>
 <body>
 <Header class="banner">
@@ -444,6 +447,9 @@
 			</div>
 		</div>
 		
+		<div class="mymatha">
+			<img id="loading" src="image/round.png">
+		</div>
 
 		<div class="owl-carousel">
 		  <div class="testomonial_width">
@@ -615,6 +621,9 @@
 			<p>2019 All Rights Reserved</p>
 		</div>
 	</div>
+
+	
+	
 </footer>
 
 
